[package]
name = "freemind"
version = "0.1.0"
edition = "2021"
authors = ["doncato <doncato@notarobot.cyou>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.26"
clap = { features = ["cargo"], version = "4" }
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
